# tennis_crawler

./: .gitignore  pyproject.toml
data/: all_tennis_programs_20251218_171830.csv  all_tennis_programs_20251218_171830.json
src/: batch_scraper.py  main.py  models.py  ncaa_directory.py  schools_data.py  scraper.py
