[project]
name = "tennis-crawler"
version = "0.1.0"
description = "Scraper for US college tennis program data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]
playwright = [
    "playwright>=1.40.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
